# Smart-Surveillance-System

./: .gitignore  0794.py  README.md  demo_quick.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/comms/: streaming.yaml
configs/device/: surveillance.yaml
configs/quant/: optimization.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py  surveillance.py
src/comms/: __init__.py
src/evaluation/: __init__.py  benchmarking.py
src/export/: __init__.py  deployment.py
src/pipelines/: __init__.py  streaming.py
src/runtimes/: __init__.py
src/utils/: __init__.py  core.py
tests/: test_surveillance.py
